# clinic_appointment_service

./: .dockerignor  Dockerfile  README.md  TASK.md  dev-docker-compose.yml  entrypoint.sh  prod-docker-compose.yml  pyproject.toml
clinic/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
clinic/migrations/: 0001_initial.py  0002_initial.py  0003_rename_specialization_doctor_specializations.py  0004_alter_doctor_specializations.py  0005_alter_doctorslot_end_alter_doctorslot_start.py  0006_alter_doctorslot_doctor_id.py  0007_alter_appointment_doctor_slot_id_and_more.py
clinic/services/: appointment_service.py
clinic/tests/: base.py  test_appointment_endpoints.py  test_doctor_endpoints.py  test_slot_endpoints.py  test_specialization_endpoints.py
config/: settings.py  urls.py
payment/: models.py  serializers.py  stripe_service.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_status.py  0003_alter_payment_session_url.py
payment/payment_services/: __init__.py  base.py  stripe_service.py
production/: entrypoint.sh
user/: models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
