[project]
name = "clinic-appointment-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "dj-rest-auth>=7.2.0",
    "django-allauth>=65.17.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.17.0",
    "requests>=2.34.2",
]
