[project]
name = "clinic-appointment-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "dj-rest-auth>=7.2.0",
    "django-allauth>=65.17.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.17.0",
    "dotenv>=0.9.9",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
    "stripe>=15.2.0",
]
